# test-php-ffi

./: Cargo.toml  README.md  bindings.h  cbindgen.toml
php/: Dockerfile  preload.php  test.php
src/: build.rs  lib.rs  main.rs
