[package]
name = "test-php-ffi"
version = "0.1.0"
authors = ["Klein Florian <florian.klein@free.fr>"]
edition = "2018"

build = "src/build.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.10.0"
